# CTU_PUI_2020

./: .gitignore  README.md
Sem01_planning/: CMakeLists.txt  lmcut.cpp  main.cpp  my_heap.cpp
Sem01_planning/TestSets/barman/: p433.1.fdr  p433.1.pddl  p433.1.plan  p433.1.strips
Sem01_planning/TestSets/floortile/: opt-p01-001.fdr  opt-p01-001.plan  opt-p01-001.strips  opt-p01-002.fdr  opt-p01-002.plan  opt-p01-002.strips  opt-p02-003.fdr  opt-p02-003.plan  opt-p02-003.strips
Sem01_planning/TestSets/pegsol/: p01.fdr  p01.plan  p01.strips  p02.fdr  p02.plan  p02.strips  p03.fdr  p03.plan  p03.strips  p04.fdr  p04.plan  p04.strips  p05.fdr  p05.plan  p05.strips  p06.fdr  p06.plan  p06.strips  p07.fdr  p07.plan  p07.strips  p08.fdr  p08.plan  p08.strips  p09.fdr  p09.plan  p09.strips  p10.fdr  p10.plan  p10.strips  p11.fdr  p11.plan  p11.strips  p12.fdr  p12.plan  p12.strips  p13.fdr  p13.plan  p13.strips  p14.fdr  (+8 more)
Sem01_planning/TestSets/pui-test-set/custom/: pfile1.strips  pfile2.strips
Sem01_planning/TestSets/scanalyzer/: p03.fdr  p03.plan  p03.strips
Sem01_planning/TestSets/transport/: p02.fdr  p02.plan  p02.strips
Sem02_probabilistic_planning/: a_star_dict_data.dill  agent.py  agent_utils.py  all_experiments_dataframe.csv  astar_agent.py  environment.yml  experiments.ipynb  general_utils.py  main.py  maze_env.py  maze_io.py  navmesh_agent.py
Sem02_probabilistic_planning/mazes/: maze-12-1.txt  maze-12-2.txt  maze-12-3.txt  maze-12-4.txt  maze-12-5.txt  maze-25-1.txt  maze-25-2.txt  maze-25-3.txt  maze-25-4.txt  maze-25-5.txt  maze-3-1.txt  maze-3-2.txt  maze-3-3.txt  maze-3-4.txt  maze-3-5.txt  maze-50-1.txt  maze-50-2.txt  maze-50-3.txt  maze-50-4.txt  maze-50-5.txt  maze-7-1.txt  maze-7-2.txt  maze-7-3.txt  maze-7-4.txt  maze-7-5.txt
